--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "MailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "Username": "alpinramdalisakbar@gmail.com",
-    "Password": "lien igkr aute mipj"
+    "Username": "",
+    "Password": ""
   }
 }
